# secure-driver-verification-system

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  blocklist.py  collector.py  evaluator.py  main.py  pyproject.toml  requirements.txt  verifier.py
.github/workflows/: ci.yml  tests.yml
rules/: kernel_suspicious.yar
src/: baseline.py  cert_verifier.py  etw_monitor.py  evaluator.py  main.py  rule_engine.py  rules.yaml  sarif_exporter.py  yara_verifier.py
src/plugins/: base_plugin.py  manager.py  yara_plugin.py
tests/: test_sdvs.py
